# exemplar

./: .gitattributes  .gitignore  CMakePresets.json  README.md
.devcontainer/: devcontainer.json
cookiecutter/{{cookiecutter.project_name}}/: .gitattributes  .pre-commit-config.yaml  CMakeLists.txt  README.md
cookiecutter/{{cookiecutter.project_name}}/.github/: CODEOWNERS
cookiecutter/{{cookiecutter.project_name}}/.github/workflows/: .beman_submodule  README.md  ci_tests.yml  pre-commit.yml  reusable-beman-build-and-test.yml  reusable-beman-create-issue-when-fault.yml  reusable-beman-pre-commit.yml  reusable-beman-preset-test.yml  reusable-beman-submodule-check.yml  update-pre-commit.yml
cookiecutter/{{cookiecutter.project_name}}/docs/: using_{{cookiecutter.project_name}}.md
cookiecutter/{{cookiecutter.project_name}}/examples/: CMakeLists.txt  identity_as_default_projection.cpp  identity_direct_usage.cpp
cookiecutter/{{cookiecutter.project_name}}/include/beman/{{cookiecutter.project_name}}/: identity.hpp
cookiecutter/{{cookiecutter.project_name}}/infra/: .beman_submodule  .pre-commit-config.yaml  README.md
cookiecutter/{{cookiecutter.project_name}}/infra/.github/: CODEOWNERS
cookiecutter/{{cookiecutter.project_name}}/infra/cmake/: use-fetch-content.cmake
cookiecutter/{{cookiecutter.project_name}}/infra/containers/: Dockerfile
cookiecutter/{{cookiecutter.project_name}}/infra/tools/beman-submodule/: README.md  beman-submodule
cookiecutter/{{cookiecutter.project_name}}/infra/tools/beman-submodule/test/: test_beman_submodule.py
cookiecutter/{{cookiecutter.project_name}}/infra/tools/beman-tidy/: README.md  pylock.toml
cookiecutter/{{cookiecutter.project_name}}/infra/tools/beman-tidy/beman_tidy/: .beman-standard.yml
cookiecutter/{{cookiecutter.project_name}}/infra/tools/beman-tidy/beman_tidy/lib/: pipeline.py
cookiecutter/{{cookiecutter.project_name}}/infra/tools/beman-tidy/beman_tidy/lib/checks/base/: base_check.py
cookiecutter/{{cookiecutter.project_name}}/infra/tools/beman-tidy/beman_tidy/lib/checks/beman_standard/: cmake.py  cpp.py  directory.py  file.py  general.py  license.py  readme.py  repository.py  toplevel.py
cookiecutter/{{cookiecutter.project_name}}/infra/tools/beman-tidy/beman_tidy/lib/checks/system/: git.py  registry.py
cookiecutter/{{cookiecutter.project_name}}/infra/tools/beman-tidy/beman_tidy/lib/utils/: git.py  string.py  terminal.py
cookiecutter/{{cookiecutter.project_name}}/infra/tools/beman-tidy/docs/: dev-guide.md
cookiecutter/{{cookiecutter.project_name}}/infra/tools/beman-tidy/tests/lib/checks/beman_standard/license/data/invalid/: invalid-LICENSE-v5  invalid-LICENSE-v7
cookiecutter/{{cookiecutter.project_name}}/infra/tools/beman-tidy/tests/lib/checks/beman_standard/license/data/valid/: valid-LICENSE-v1
cookiecutter/{{cookiecutter.project_name}}/infra/tools/beman-tidy/tests/lib/checks/beman_standard/readme/: test_readme.py
cookiecutter/{{cookiecutter.project_name}}/infra/tools/beman-tidy/tests/lib/checks/beman_standard/readme/data/invalid/: invalid-badge-v1.md  invalid-badge-v2.md  invalid-badge-v3.md  invalid-badge-v5.md  invalid-implements-v2.md  invalid-implements-v3.md  invalid-implements-v4.md  invalid-status-line-v1.md  invalid-status-line-v3.md  invalid-title-v1.md  invalid-title-v2.md  invalid-title-v3.md  invalid-title-v4.md  invalid.md
cookiecutter/{{cookiecutter.project_name}}/infra/tools/beman-tidy/tests/lib/checks/beman_standard/readme/data/valid/: README-v2.md  README-v3.md  README-v4.md
cookiecutter/{{cookiecutter.project_name}}/infra/tools/beman-tidy/tests/lib/checks/beman_standard/toplevel/: test_toplevel.py
cookiecutter/{{cookiecutter.project_name}}/infra/tools/beman-tidy/tests/utils/: conftest.py  file_testcase_runners.py  path_runners.py
cookiecutter/{{cookiecutter.project_name}}/src/beman/{{cookiecutter.project_name}}/: CMakeLists.txt  beman.{{cookiecutter.project_name}}-config.cmake.in  identity.cpp
cookiecutter/{{cookiecutter.project_name}}/tests/beman/{{cookiecutter.project_name}}/: CMakeLists.txt  identity.test.cpp
docs/: README.md
infra/tools/beman-tidy/: pyproject.toml
infra/tools/beman-tidy/beman_tidy/: .beman-standard.yml  cli.py
infra/tools/beman-tidy/beman_tidy/lib/: pipeline.py
infra/tools/beman-tidy/beman_tidy/lib/checks/base/: base_check.py  directory_base_check.py  file_base_check.py
infra/tools/beman-tidy/beman_tidy/lib/checks/beman_standard/: directory.py  file.py  general.py  license.py  readme.py  release.py  toplevel.py
infra/tools/beman-tidy/beman_tidy/lib/utils/: git.py
infra/tools/beman-tidy/docs/: dev-guide.md
infra/tools/beman-tidy/tests/: conftest.py
infra/tools/beman-tidy/tests/lib/checks/beman_standard/directory/: test_directory.py
infra/tools/beman-tidy/tests/lib/checks/beman_standard/general/: conftest.py  test_general.py
infra/tools/beman-tidy/tests/lib/checks/beman_standard/general/data/valid/repo-exemplar-v1/.github/: CODEOWNERS
infra/tools/beman-tidy/tests/lib/checks/beman_standard/license/: test_license.py
infra/tools/beman-tidy/tests/lib/checks/beman_standard/license/data/invalid/: invalid-LICENSE-v1  invalid-LICENSE-v2  invalid-LICENSE-v3  invalid-LICENSE-v4  invalid-LICENSE-v6
infra/tools/beman-tidy/tests/lib/checks/beman_standard/readme/: conftest.py  test_readme.py
infra/tools/beman-tidy/tests/lib/checks/beman_standard/readme/data/invalid/: invalid-badge-v1.md  invalid-badge-v2.md  invalid-badge-v3.md  invalid-badge-v4.md  invalid-badge-v6.md  invalid-badge-v7.md  invalid-badge-v8.md  invalid-implements-v1.md  invalid-status-line-v1.md  invalid-status-line-v2.md  invalid-status-line-v3.md  invalid-title-v1.md  invalid-title-v4.md
infra/tools/beman-tidy/tests/lib/checks/beman_standard/readme/data/valid/: README-v1.md  README-v3.md  README-v4.md
infra/tools/beman-tidy/tests/lib/checks/beman_standard/repository/: test_repository.py
infra/tools/beman-tidy/tests/lib/checks/beman_standard/toplevel/data/valid/repo-exemplar-v1/: LICENSE
infra/tools/beman-tidy/tests/utils/: directory_testcase_runners.py  path_runners.py
(+34 files in other folders)
